# wdrec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: info.md  tags.md
docs/api/: add.md  config.md  list.md  remove.md  version.md
src/: data.c  data.h  main.c  replword.c  replword.h  tagmap.c  tagmap.h  tagvalid.c  wcmds.c  wcmds.h  wparser.c  wparser.h
src/http/: CMakeLists.txt  http.c  http.h  http_api.c  http_client.c  http_client.h
src/keyreader/: CMakeLists.txt  keybuffer.c  keybuffer.h  keyhook.c  keyhook.h  keyhook_raw.h  keytyper.c  keytyper.h
src/utils/: CMakeLists.txt  argparse.c  argparse.h  array.h  http_request.h  http_response.h  path.h  socket.h  str.h  tags.c  tags.h
